[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
taskipy = "^1.10.3"




[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
